--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
             <div id = 'equal'>=</div>
         </section>
         
-		<script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="js/test.js"></script>
 	</body>
 </html>
